[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "rna_clustering_algorithms"
version = "1.0.0"
authors = [
  { name="Daniel Sutton"},
  { name="Laurits Madsen"},
  { name="Sebastian Svendsen"},
  { name="Valdemar Fuglsang"},
]
description = "Modular clustering extension for scanpy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "scanpy>=1.9.0",
    "numpy>=1.20.0",
    "anndata>=0.8.0",
    "scipy>=1.8.0",
    "scikit-learn>=1.7.0",
]
